# nfc_certification_app

./: .gitignore  README.md  pubspec.yaml
android/: settings.gradle
android/FaceSDKForHeimann-release/: FaceSDKForHeimann-release.aar  build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  dummy-lib.cpp
android/app/src/main/kotlin/com/alcherainc/nfc_certification_app/: MainActivity.kt  NativeCameraLayout.kt  NativeCameraLayoutFactory.kt
android/app/src/main/kotlin/com/alcherainc/nfc_certification_app/camera/: AutoFitSurfaceView.kt  CameraSizes.kt  FaceCamera.kt  FaceCamera2.kt  FaceCameraX.kt  FaceClip.kt  FaceDetectConfig.kt  FaceDetectLogic.kt  FaceGraphicView.kt  FacePower.kt  FaceProcessorIR.kt  FaceProximity.kt  FaceSdk.kt  FaceThermal.kt  ScannerCamera.kt  YuvToRgbConverter.kt
android/app/src/main/kotlin/com/alcherainc/nfc_certification_app/util/: Device.kt  ImageUtils.kt  LED.kt  Util.kt
android/telpo_temperature_v1.1.0/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bindings/: MainBinding.dart  ProfileBinding.dart
lib/controller/: main_controller.dart  profile_controller.dart
lib/routes/: app_pages.dart  app_routes.dart
lib/ui/platform_views/: native_camera_view.dart
lib/ui/screen/: main_app.dart  profile_app.dart
test/: widget_test.dart
